--- a/man/gensio.5
+++ b/man/gensio.5
@@ -281,8 +281,8 @@ available to IPv4.  You can do, say
 .B tcp,ipv6n4,::1,1234
 and it will work, but since
 .B::1
-is not IPv4, you won't be able to get to it.  You have to specify an
-IPv4 address, like:
+is not IPv4, you won't be able to get to it from IPv4.  You have to
+specify an IPv4 address, like:
 .B tcp,ipv6n4,127.0.0.1,1234
 which will result in a single IPv6 socket mapped into IPv4 space:
 .IP
