udp: Add extra info to received UDP packets
Add an extrainfo option that can be set on UDP sockets to provide extra
information on received packets.  This allows the interface index and
destination address of a packet to be easily available.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio_control.3
+++ b/man/gensio_control.3
@@ -279,6 +279,13 @@ Used to get the IOD pointer for the gensio as a raw pointer.  For
 gensios that have more than one IOD, the string you pass in will be a
 string number representing which IOD, "0" for the first (stdin), "1"
 for the second (stdout), and "2" for the third, (stderr).
+.SS "GENSIO_CONTROL_EXTRAINFO"
+This enables extra info to be returned on a received UDP packet.  If
+this is set to non-zero (normal string like "1" passed in), extra
+fields will be added to the auxdata in received packets.  These field
+are: "daddr:<address>" with the destination address from the packet
+and "ifidx:<n>" with the integer interface index the packet was
+received on.
 .SH "RETURN VALUES"
 Zero is returned on success, or a gensio error on failure.
 .SH "SEE ALSO"
