Modify oob handling to be disabled by default
Before, oob data delivery was enabled and could not be disabled.
However, many apps don't care about oob data, and that make it
inconvenient for each of them to handle it.  So disable it be default
and add a control to enable it.

Adjust the various users (telnet, gtlssh[d]) to enable it as necessary.
This required adding a base operation where a filter can set the child
controls.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio_control.3
+++ b/man/gensio_control.3
@@ -286,6 +286,11 @@ fields will be added to the auxdata in received packets.  These field
 are: "daddr:<address>" with the destination address from the packet
 and "ifidx:<n>" with the integer interface index the packet was
 received on.
+.SS "GENSIO_CONTROL_ENABLE_OOB"
+Out of band (OOB) data is disabled by default on all gensios and
+setting this to non-zero (normal string like "1" passed in) will
+enable it.  Note that you should only set this on the gensio you are
+directly communicating with, it is used between some gensios.
 .SH "RETURN VALUES"
 Zero is returned on success, or a gensio error on failure.
 .SH "SEE ALSO"
