Reject new channel on error return from new channel callback
You can to handle the return code from new channel, the upper layer may
return GE_NOSUP if it doesn't support it, and you have to do the right
thing in that case.

The mux changes uncovered some bugs in there, some refcount rework had
to be done to handle this, and free/close calls in the handler had to
have some special handling to avoid bad situations.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio_event.3
+++ b/man/gensio_event.3
@@ -82,8 +82,8 @@ A new channel has been created by the remote end of the connection.
 The new channel gensio is in buf and must be cast.  Information about
 the channel will be passed in
 .B auxdata,
-see documentation on the particular gensio for details.  The return
-value is ignored.
+see documentation on the particular gensio for details.  If this
+returns an error (non-zero) the channel is shut down.
 
 .SS "GENSIO_EVENT_SEND_BREAK"
 Got a request from the other end to send a break.  Telnet client or
