man: Fix an error in the ax25 docs
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -1716,7 +1716,7 @@ where
 .B callsign
 is a set of alphanumeric digits (a-zA-Z0-9) and
 .B n
-is a single digit 0-9.  Lower case digits are converted to upper case
+is a number 0-15.  Lower case digits are converted to upper case
 in the address and not converted back on receipt.
 .SS Handling unconnected packets (UI frames)
 To receive UI frames, you must enable the
