Fix some miscellaneous bugs
Things found by Coverity.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -106,7 +106,7 @@ type will be covered in a separate section.  Also note that gensio
 types can be dynamically added by the user, so there may be gensios
 available that are not described here.
 
-Unless othersize noted, every gensio takes a:
+Unless otherwise noted, every gensio takes a:
 
 .TP
 .B readbuf=<n>
